package BordTennis.Data;

import java.util.ArrayList;

public class FileIO implements IO {

    @Override
    public ArrayList<String> readGameData(String path) {
        return null;
    }

    @Override
    public ArrayList<String> readTeamData(String path) {
        return null;
    }

    @Override
    public ArrayList<String> readTournamentData(String path) {
        return null;
    }

    @Override
    public void saveGameData(String path) {

    }

    @Override
    public void saveTeamData(String path) {

    }

    @Override
    public void saveTournamentData(String path) {

    }
}
