package BordTennis;

public class Player {
}
