package BordTennis;

public class Team {
}
