package BordTennis;

public class Tournament {
}
